Displaying multiple plugins